Tensor das Deformações de Green-Lagrange e particionando o projeto

--- a/index.tex
+++ b/index.tex
@@ -4,204 +4,6 @@
 
 \begin{document}
 
-	\section{Estudos das deformações}
-	
-	\subsection{Considerações iniciais}
-	
-	% \boldsymbol{g} para deixar o símbolo em negrito
-	
-	\begin{itemize}
-		\item Configuração do sólido: posição ocupada pelos pontos em um determinado instante $t$;
-		\item Descrever a configuração deformada ($V$) a partir de uma configuração de referência ($V^r$);
-		\item Considerando um conjunto de pontos da Geometria Euclidiana ($E$), e seja, $(\utilde{e_1},\;\utilde{e_2},\;\utilde{e_3})$ uma base do espaço vetorial da geometria clássica.
-	\end{itemize}
-	
-	Podemos definir $(0,\;\utilde{e_1},\;\utilde{e_2},\;\utilde{e_3})$ como um sistema de referência:
-	
-	// Inserir imagem
-	
-	Os vetores dos pontos de referência ($\utilde{x^r}$) e na configuração deformada ($\utilde{x}$) em relação aos versores da base podem ser expressos na notação de Einstein:
-	
-	\[\utilde{x^r}=x^r-0=\sum_{i=1}^3x^{ri}\utilde{e_i}=x^{r1}\utilde{e_1}+x^{r2}\utilde{e_2}+x^{r3}\utilde{e_3}\]
-	\[\utilde{x}=x-0=\sum_{i=1}^3x^i\utilde{e_i}=x^1\utilde{e_1}+x^2\utilde{e_2}+x^3\utilde{e_3}\]
-	
-	Seja $\psi$ uma função que associa a posição de cada ponto na configuração $V^r$ a sua posição na configuração $V$. Tal aplicação é uma transformação de $V^r$ em $V$.
-	
-	\[x^1=\hat{x}^1(x^{r1},\;x^{r2},\;x^{r3})\]
-	\[x^2=\hat{x}^2(x^{r1},\;x^{r2},\;x^{r3})\]
-	\[x^3=\hat{x}^3(x^{r1},\;x^{r2},\;x^{r3})\]
-	
-	Aqui, o circunflexo denota \textit{em função de}, \textit{i.e.}, a coordenada $i$ da posição deformada está em função das coordenadas da posição de referência.
-	
-	Exemplo: Considere um sólido cuja seção no plano $\utilde{e_1}$, $\utilde{e_2}$ é dado por:
-	
-	//Inserir imagem
-	
-	Caracterize os seguintes campos de deslocamento:
-	
-	\begin{enumerate}[a)]
-		\item Translação de corpo rígido de intensidade $\Delta$ na direção de $\utilde{e_1}$;
-		\item Rotação de corpo rígido em torno de $\utilde{e_3}$ de intensidade $\varphi$.
-	\end{enumerate}
-	
-	Resolução:
-	
-	\begin{enumerate}[a)]
-		\item
-			\[
-			\utilde{u}=
-				\begin{Bmatrix}
-				u_1 \\ u_2 \\ u_3
-				\end{Bmatrix}
-				=
-				\begin{Bmatrix}
-					\Delta \\ 0 \\ 0
-				\end{Bmatrix}
-			\]
-			\[\utilde{u}=\utilde{x}-\utilde{x^r}
-			\implies
-			\utilde{x}=
-			\begin{cases} x^1=x^{r1}+u_1=x^{r1}+\Delta \\ x^2=x^{r2}+u_2=x^{r2} \\ x^3=x^{r3}+u_3=x^{r3}
-			\end{cases}
-			\]
-		\item
-			//Inserir imagem
-			
-			A configuração de referência:
-			\[x^{r1}=r\cdot \cos\theta\]
-			\[x^{r2}=r\cdot\sin\theta\]
-			\[x^{r3}=0\;\text{(ou }x^{r3}\text{ para deixar genérico})\]
-			
-			A configuração deformada (a partir da imagem):
-			
-			\[u^1=r\cdot\cos(\varphi+\theta)-r\cdot\cos\theta\]
-			\[u^1=r\cdot\cos\varphi\cdot\cos\theta-r\cdot\sin\varphi\cdot\sin\theta-r\cdot\cos\theta\]
-			
-			\[u^2=r\cdot\sin(\varphi+\theta)-r\cdot\sin\theta\]
-			\[u^2=r\cdot\sin\varphi\cdot\cos\theta+r\cdot\sin\theta\cdot\cos\varphi-r\cdot\sin\theta\]
-			
-			Substituindo as coordenadas de referência nas coordenadas deformadas:
-			
-			\[u^1=x^{r1}\cdot\cos\varphi-x^{r2}\cdot\sin\varphi-x^{r1}\]
-			\[u^2=x^{r1}\cdot\sin\varphi+x^{r2}\cdot\cos\varphi-x^{r2}\]
-			\[u^3=0\]
-			
-			Como sabemos que $\utilde{x}=\utilde{x^r}+\utilde{u}$, temos:
-			
-			\[
-				\begin{cases}
-					x^1=x^{r1}\cdot\cos\varphi-x^{r2}\cdot\sin\varphi \\ x^2=x^{r1}\cdot\sin\varphi+x^{r2}\cdot\cos\varphi \\ x^3=x^{r3}
-				\end{cases}
-			\]
-			
-			Podemos escrever também na forma matricial:
-			
-			\[
-				\begin{Bmatrix}
-					x^1 \\ x^2 \\ x^3
-				\end{Bmatrix}
-				=
-				\begin{bmatrix}
-				
-					\cos\varphi & -\sin\varphi & 0 \\
-					\sin\varphi & \cos\varphi & 0 \\
-					0 & 0 & 1
-				\end{bmatrix}
-				\begin{Bmatrix}
-					x^{r1} \\ x^{r2} \\ x^{r3}
-				\end{Bmatrix}							
-			\]
-	\end{enumerate}
-		
-	\subsection{Deformação Normal e por Cisalhamento}
-	
-	//Inserir imagem
-	
-	O assunto agora são fibras; como as fibras sofrem deformação. Seja $d\utilde{x}^r$ o vetor infinitesimal que representa uma fibra a partir do ponto $x^r$; $d\utilde{x}$ o vetor infinitesimal da mesma fibra agora na configuração deformada, partindo do ponto $x$.
-	Para que o vetor $d\utilde{x}^r$ deforme e se transforme em $d\utilde{x}$, deve ocorrer uma transformação que depende de $\utilde{x}^r+d\utilde{x}^r$, \textit{i.e.}, uma transformação $\utilde{u}(\utilde{x}^r+d\utilde{x}^r)$.
-	
-	Algumas relaçõe podem ser estabelecidas a partir da imagem acima, sendo:
-	\[\utilde{u}(\utilde{x}^r)=d\utilde{x}^r+\utilde{u}(\utilde{x}^r+d\utilde{x}^r)\]
-	
-	E a fibra na configuração deformada:	
-	\[d\utilde{x}=d\utilde{x}^r+\utilde{u}(\utilde{x}^r+d\utilde{x}^r)-\utilde{u}(\utilde{x}^r)\]
-	
-	A equação acima na forma de componentes:
-	\[dx^i=dx^{ri}+u^i(x^{r1}+dx^{r1},\;x^{r2}+dx^{r2},\;x^{r3}+dx^{r3})-u^i(x^{r1},\;x^{r2},\;x^{r3})\]
-	
-	Lembrando de cálculo com múltiplas variáveis:
-	\[u^i(x^{r1}+dx^{r1},\;x^{r2}+dx^{r2},\;x^{r3}+dx^{r3})-u^i(x^{r1},\;x^{r2},\;x^{r3})=\frac{\partial u^i}{\partial x^{r1}}dx^{r1}+\frac{\partial u^i}{\partial x^{r2}}dx^{r2}+\frac{\partial u^i}{\partial x^{r3}}dx^{r3}\]
-	
-	Para $i=1,\;2$ e $3$. Essa iteração diz que cada coordenada $i$ depende de acontecimentos nas $3$ dimensões do espaço euclidiano.
-	
-	Reescrevendo na forma matricial:
-	\[
-	\underbrace{
-		\begin{Bmatrix}
-			dx^1 \\ dx^2 \\ dx^3
-		\end{Bmatrix}
-		}_{\displaystyle d\utilde{x}}
-		=
-		\underbrace{
-		\begin{Bmatrix}
-			dx^{r1} \\ dx^{r2} \\ dx^{r3}
-		\end{Bmatrix}
-		}_{\displaystyle d\utilde{x}^r}
-		+
-		\underbrace{
-		\begin{bmatrix}
-			\frac{\partial u^1}{\partial x^{r1}} & \frac{\partial u^1}{\partial x^{r2}} & \frac{\partial u^1}{\partial x^{r3}} \\
-			\frac{\partial u^2}{\partial x^{r1}} & \frac{\partial u^2}{\partial x^{r2}} & \frac{\partial u^2}{\partial x^{r3}} \\
-			\frac{\partial u^3}{\partial x^{r1}} & \frac{\partial u^3}{\partial x^{r2}} & \frac{\partial u^3}{\partial x^{r3}}
-		\end{bmatrix}
-		}_{\displaystyle\nabla\utilde{u}=\underline{L}}
-		\underbrace{
-		\begin{Bmatrix}
-			dx^{r1} \\ dx^{r2} \\ dx^{r3}
-		\end{Bmatrix}
-		}_{\displaystyle d\utilde{x}^r}
-	\]
-	
-	Onde $\nabla\utilde{u}$ é o \textbf{gradiente dos deslocamentos}.
-	
-	Logo,
-	\[d\utilde{x}=d\utilde{x}^r+\nabla\utilde{u}\;d\utilde{x}^r\]
-	
-	Colocando $d\utilde{x}^r$ em evidência, temos:
-	\[d\utilde{x}=\underbrace{(\underline{I}+\nabla\utilde{u})}_{\displaystyle \underline{F}}d\utilde{x}^r\]
-	
-	Onde $\underline{F}$ é o \textbf{gradiente das deformações}.
-	
-	Portanto, temos:
-	\begin{equation}
-	d\utilde{x}=\underline{F}\;d\utilde{x}^r
-	\end{equation}
-	
-	Ou seja, a fibra deformada agora pode ser obtida a partir do gradiente dos deslocamentos ($\nabla\utilde{u}$) e também a partir do gradiente das deformações ($\underline{F}$).
-	
-	O gradiente das deformações pode ser reescrito como:
-	\[
-	\underline{F}=
-	\begin{bmatrix}
-		1+\frac{\partial u^1}{\partial x^{r1}} & \frac{\partial u^1}{\partial x^{r2}} & \frac{\partial u^1}{\partial x^{r3}} \\
-		\frac{\partial u^2}{\partial x^{r1}} & 1+\frac{\partial u^2}{\partial x^{r2}} & \frac{\partial u^2}{\partial x^{r3}} \\
-		\frac{\partial u^3}{\partial x^{r1}} & \frac{\partial u^3}{\partial x^{r2}} & 1+\frac{\partial u^3}{\partial x^{r3}}
-	\end{bmatrix}
-	\]
-	
-	Ou ainda, usando notação indicial de Einstein:
-	\[F_{ij}=\nabla u_{ij}+\delta_{ij}\]
-	
-	Onde $\delta_{ij}$ é o delta de Kronecker, \textit{i.e.}: $\delta_{ij}=\begin{cases} 1, & \text{se } i=j \\ 0, & \text{se } i\neq j \end{cases}$
-	
-	E em notação indicial, temos:
-	\[\nabla u_{ij}=\frac{\partial u^i}{\partial x^{rj}}\]
-	
-	Agora, expressemos:
-	\[\utilde{u}=\utilde{x}-\utilde{x}^r\implies \utilde{x}=\utilde{u}+\utilde{x}^r\]
-	\[x^i=u^i+x^{ri}\]
-	
-	Derivando ambos os lados da notação indicial acima, temos:
-	\[\frac{\partial x^i}{\partial x^{rj}}=\frac{\partial u^i}{\partial x^{rj}}+\underbrace{\frac{\partial x^{ri}}{\partial x^{rj}}}_{\displaystyle\delta_{ij}}\]
-	
+	\input{Estudo-das-deformações.tex}
+
 \end{document}
