consertando typo na descrição da imagem do tópico "variação do ângulo entre fibras (distorção)"

--- a/Estudo-das-deformações.tex
+++ b/Estudo-das-deformações.tex
@@ -325,7 +325,7 @@
 	
 	\begin{itemize}
 		\item $d\utilde{\mathbf{a}}^r$ e $d\utilde{\mathbf{b}}^r$ são inicialmente ortogonais;
-		\item $\underline{\mathbf{F}}$ e $d\utilde{\mathbf{a}}^r$ tem a mesma direção de $d\utilde{\mathbf{a}}$ (hipótese);
+		\item $\underline{\mathbf{F}}d\utilde{\mathbf{a}}^r$ tem a mesma direção de $d\utilde{\mathbf{a}}$ (hipótese);
 		\item $\hat{\utilde{\mathbf{a}}}$ e $\hat{\utilde{\mathbf{b}}}$ são versores.
 	\end{itemize}
 	
